# etch341

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  build.rs  justfile
.github/: dependabot.yml
.github/workflows/: actionlint.yml  ci.yml  docs.yml  release.yml
chips/: chips.toml  i2c_chips.toml
docs/: astro.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
docs/public/: robots.txt
docs/scripts/: build-og-image.mjs  sync-changelog.mjs
docs/src/components/: Hero.astro  SocialIcons.astro
docs/src/content/docs/: 404.mdx  index.mdx  install.md
docs/src/content/docs/reference/: chips.md  requirements.md  testing.md
docs/src/content/docs/usage/: cli.md  gui.md  i2c.md  spi.md  wiring.md
packaging/linux/: etch341-postinstall.sh  etch341.desktop
packaging/windows/wix/: main.wxs
platform/udev/: 99-ch341a.rules
resources/: Info.plist  icon.rc
resources/icons/: icon.icns
src/: ch341.rs  chipdb.rs  cli.rs  diff.rs  error.rs  i2c.rs  i2c_ops.rs  ifd.rs  inspect.rs  main.rs  ops.rs  prefs.rs  programmer.rs  sfdp.rs  spi.rs
src/gui/: app.rs  bios_diff.rs  chipdb_browser.rs  header.rs  log.rs  menus.rs  mod.rs  panes.rs  sidebar.rs  theme.rs  updater.rs
src/gui/app/: bios.rs  diff.rs  hex.rs  i2c.rs  otp.rs  settings.rs  spi.rs
src/gui/panes/: bios.rs  diff.rs  hex.rs  i2c.rs  settings.rs  spi.rs  status.rs
src/uefi/: fv.rs  hii.rs  ifr.rs  mod.rs  nvram.rs
