[package]
name = "etch341"
version = "0.1.0"
edition = "2024"
description = "Cross-platform CLI/GUI flash programmer for the CH341A USB SPI/I²C interface."
license = "GPL-3.0-or-later"
readme = "README.md"
authors = ["packetThrower"]

[[bin]]
name = "etch341"
path = "src/main.rs"

[features]
default = ["gui"]
gui = [
    "dep:gpui",
    "dep:gpui_platform",
    "dep:gpui-component",
    "dep:gpui-component-assets",
    "dep:ureq",
    "dep:semver",
]
# Gates hardware-touching integration tests so CI without a CH341A
# attached still passes. Tag tests with `#[cfg(feature = "hardware")]`.
hardware = []

[dependencies]
# `vendored` builds libusb-1.0 from source and links it statically into
# the binary. Without it, every release artifact needs a matching
# libusb-1.0 installed on the target machine — fine for `cargo install`
# users, awful for downloads from the GitHub Release page. Trade-off
# is a slightly slower first build (cc compiles libusb's ~50 .c files)
# and a slightly bigger binary (~80 KB).
rusb = { version = "0.9", features = ["vendored"] }
clap = { version = "4", features = ["derive"] }
thiserror = "1"
indicatif = "0.18"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"
# Pure-Rust LZMA for UEFI compressed firmware-volume sections
# (src/uefi/). Compression side is only used by tests.
lzma-rs = "0.3"

# Local-time formatting for the GUI activity log. The original
# `now_hms()` did HH:MM:SS in UTC by dividing `SystemTime::now()`
# seconds, which has no notion of timezone. `local-offset` enables
# `UtcOffset::current_local_offset()` so the user's "Local"
# preference can render existing UTC-stored log entries against the
# system's offset.
time = { version = "0.3", features = ["local-offset"] }

# GUI-only: the boot-time "newer release available" check. Detection
# only — queries the GitHub Releases API and compares the tag to
# CARGO_PKG_VERSION. Optional + gated behind the `gui` feature so the
# CLI-only build (`--no-default-features`) doesn't pull in a TLS
# stack. `json` for the response parse, `tls` for HTTPS.
ureq = { version = "2", features = ["json", "tls"], optional = true }
semver = { version = "1", optional = true }

# Native file-picker dialogs (NSOpenPanel on macOS, GTK on Linux,
# IFileOpenDialog on Windows). Used by the GUI's Write / Verify
# panes to choose a binary file. Stays in the default deps because
# the CLI build skips the GUI feature, and rfd is light enough
# that even a CLI-only binary linking it has negligible cost.
rfd = "0.14"

# GUI stack — feature-gated.
#
# `gpui` and `gpui_platform` deliberately have NO rev. The gpui-component
# git tip pins gpui with no rev either; Cargo only unifies two git deps
# of the same crate when their specs match. A rev pin here would
# duplicate the gpui crate graph in the build. Reproducibility comes
# from Cargo.lock — bump with `cargo update -p gpui` deliberately.
gpui = { git = "https://github.com/zed-industries/zed", optional = true }

# Per-platform backend. Linux `wayland` and `x11` features are NOT
# default — without them, `gpui::guess_compositor()` returns "Wayland"
# inside a Wayland session but the matching arm is cfg'd out, hitting
# `unreachable!()` before the first window paints. Harmless on macOS / Windows.
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "wayland", "x11"], optional = true }

# Widget library. Pinned to a git rev because the crates.io version
# targets a different gpui than our git pin. The git tip pins gpui with
# no rev, so Cargo unifies it against ours.
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "2d2524d89efc47270e9a0ee18f10fa72cd573eff", optional = true }

# Lucide icon SVGs. Without `.with_assets(Assets)` at startup, every
# `IconName::*` referenced by a gpui-component widget renders as an
# empty rect. Pin to the same rev so the icon set tracks the `IconName`
# enum in gpui-component.
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "2d2524d89efc47270e9a0ee18f10fa72cd573eff", optional = true }
mu_uefi_decompress = "4.1.0"

[dev-dependencies]
mockall = "0.12"

# Build-script-only dep. Embeds resources/icons/icon.ico into the
# Windows .exe PE resource section so Explorer / taskbar / Alt-Tab
# show the etch341 icon on the binary itself. No-op on other targets.
[build-dependencies]
embed-resource = "3"

# cargo-packager metadata. Drives `cargo packager --release -f
# <format>` invocations in .github/workflows/release.yml. Defines
# the per-platform installer artifacts that ship on every tag.
[package.metadata.packager]
product-name = "etch341"
identifier = "io.github.packetThrower.etch341"
category = "DeveloperTool"
copyright = "© 2026 packetThrower / etch341 contributors"
homepage = "https://github.com/packetThrower/etch341"
authors = ["packetThrower"]
publisher = "packetThrower"
description = "Cross-platform CLI/GUI flash programmer for the CH341A USB SPI/I²C interface."
long-description = """\
etch341 is a cross-platform (macOS + Windows + Linux) flash programmer \
for SPI NOR + I²C EEPROM chips, driven over a CH341A USB programmer. \
Auto-detects the chip via JEDEC ID, ships with a database of common \
parts (W25Q, MX25L, MX25U, GD25Q, GD25LQ, SST25VF, AT25SF, EON, PUYA, \
ISSI, and the 24Cxx I²C family). One binary serves both the CLI \
(subcommand-driven) and a GPUI-based desktop GUI (launched when no \
subcommand is given).\
"""
# cargo-packager's default `before-packaging-command` is `cargo
# build --release`. The workflow sets CARGO_BUILD_TARGET so it
# cross-compiles to whichever triple the matrix entry asks for.
before-packaging-command = "cargo build --release"
# Per-platform icon files. cargo-packager picks the right one for
# each target (icns on macOS, ico on Windows, png on Linux).
icons = [
  "resources/icons/icon.icns",
  "resources/icons/icon.png",
  "resources/icons/icon.ico",
]

# .deb dependencies — runtime libs the GPUI Wayland + X11 surface
# needs on a fresh Ubuntu install. Without an explicit `depends`,
# users get "libxkbcommon-x11.so.0: cannot open shared object file"
# on first launch. libusb is statically linked via rusb's vendored
# feature so it's not in the list.
[package.metadata.packager.deb]
depends = [
  "libxkbcommon0",
  "libxkbcommon-x11-0",
  "libwayland-client0",
  "libwayland-cursor0",
  "libx11-6",
  "libxcb1",
  "libxcb-cursor0",
  "libxcb-randr0",
  "libxcb-render0",
  "libxcb-shape0",
  "libxcb-xfixes0",
  "libxcb-xkb1",
  "libfontconfig1",
  "libfreetype6",
]
# Files dropped into the install image: udev rule (so unprivileged
# users can open /dev/bus/usb/... without sudo), .desktop entry
# (launcher discovery), and the 512px icon at the freedesktop spec
# path. udev rule needs `udevadm control --reload-rules` to take
# effect on the running system — cargo-packager 0.11 doesn't expose
# postinst hooks, so the udev rule lands but requires a USB
# replug or a manual reload before first use.
files = { "platform/udev/99-ch341a.rules" = "/usr/lib/udev/rules.d/99-ch341a.rules", "packaging/linux/etch341.desktop" = "/usr/share/applications/etch341.desktop", "resources/icons/icon.png" = "/usr/share/icons/hicolor/512x512/apps/etch341.png" }

# macOS bundle config. The Info.plist is hand-curated (see
# resources/Info.plist) so it carries the keys that fix the
# terminal-window-on-double-click bug (NSPrincipalClass,
# CFBundlePackageType=APPL).
[package.metadata.packager.macos]
info-plist-path = "resources/Info.plist"
minimum-system-version = "11.0"
# Ad-hoc codesign the bundle (`-` is the ad-hoc identity). On
# arm64 the linker auto-signs the inner Mach-O; without bundle-
# level signing, Gatekeeper rejects the .app as "damaged and
# can't be opened". Not notarized — first launch is still the
# "unidentified developer" right-click → Open path until an Apple
# Developer cert lands.
signing-identity = "-"

# Windows NSIS installer config. cargo-packager produces a single
# .exe installer that handles Add/Remove Programs integration and
# proper uninstall.
[package.metadata.packager.nsis]
# Per-user install (no UAC prompt for un-privileged installs).
installer-mode = "currentUser"

# cargo-wix config for the per-arch .msi installer. Used by
# `cargo wix` (NOT cargo-packager's -f wix path) in release.yml on
# the Windows runners; cargo-packager 0.11 vendors WiX 3.11 which
# can't pass `-arch arm64` to candle.exe (that flag landed in WiX
# 3.14). cargo-wix uses the system-installed WiX 3.14+ (release.yml
# installs it via choco) and so handles both arches with one
# toolchain. packaging/windows/wix/main.wxs carries the full WiX
# source; this table sets the build-time constants cargo-wix would
# otherwise auto-generate (the UpgradeCode in particular must stay
# stable across versions or Apps & Features treats each install as
# a brand-new product instead of an upgrade).
[package.metadata.wix]
# UPGRADECODE — generated once with uuidgen; must match the
# UpgradeCode value in packaging/windows/wix/main.wxs and must
# never change for the lifetime of this product.
upgrade-guid = "A1FC4A94-D7CC-4E33-AED8-691272859196"
# cargo-wix looks for wix/main.wxs at the package root by default;
# we keep ours under packaging/windows/wix/ to group it with the
# rest of the per-platform packaging assets, so it has to be
# pointed at explicitly.
include = ["packaging/windows/wix/main.wxs"]
